feat: add doc favorites
